--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- Spring Boot Web Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -45,7 +50,10 @@
                     <target>17</target>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <!-- Executable JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
